removed language semantics and updated case study policy rules

--- a/rv2015/command.tex
+++ b/rv2015/command.tex
@@ -167,3 +167,4 @@
 \newcommand{\incrS}{\funcname{incrS}\xspace}
 \newcommand{\policyv}{\ensuremath{\phi}\xspace}
 \newcommand{\sfmap}{\textsf{SF Map}\xspace}
+\newcommand{\natlangrule}[1]{\textit{#1}}
