Broke out individual bibtex to get rid of url's, etc. easier

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -141,6 +141,6 @@ the testing of an ARV system. \monitor was able to detect violations of several 
 %\def\IEEEbibitemsep{0pt plus .5pt}
 \bibliographystyle{splncs03}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{./MergedBib}
+\bibliography{./rv2015_bibtex}
 
 \end{document}
