added the architecture image

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -5,6 +5,8 @@
 
 %\documentclass[]{Z:/Private/research/TeX/llncs/llncs}
 \documentclass[]{./llncs}
+\pdfmapfile{+ltlfonts.map}
+
 %\documentclass[]{C:/Users/akane/Documents/Research/TeX/llncs/llncs}
 %% loading some packages, deleted all the info text from the ieee example page
 \usepackage[nocompress]{cite}
